# the_grand_house_of_avneesh

./: pyproject.toml
src/The-Grand-House-of-Avneesh/ai_agents/: __init__.py
src/the_grand_house_of_avneesh/summary/: README.md  __init__.py  example_usage.py  exceptions.py  requirements.txt  text_summarizer.py  usage_example.py
src/the_grand_house_of_avneesh/summary/utils/: __init__.py  exceptions.py
src/the_grand_house_of_avneesh/summary/utils/config/: __init__.py  settings.py
src/the_grand_house_of_avneesh/summary/utils/llm/: __init__.py  bedrock_client.py  synthesis.py
src/the_grand_house_of_avneesh/summary/utils/metrics/: __init__.py  calculator.py
src/the_grand_house_of_avneesh/summary/utils/nlp/: __init__.py  sentence_ranker.py  text_processor.py
